--- a/WindowFormSimulador/WindowFormSimulador.csproj
+++ b/WindowFormSimulador/WindowFormSimulador.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FastColoredTextBox.Net6" Version="1.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Accumulator\SimulatorAcc.csproj" />
   </ItemGroup>
 
